fix image vertical align

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,7 @@ img,
 video {
     max-width: 100%;
     height: auto;
+    vertical-align: middle;
 }
 
 button {
